--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>FrontendAngular17</title>
+  <title>JABOOOOOOOLLLLLLL!!!</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="//netdna.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet" />
 </head>
 <body>
-  <app-root></app-root>
+  <app-root>
+    <p>loading...</p>
+  </app-root>
 </body>
 </html>
