--- a/src/index.html
+++ b/src/index.html
@@ -7,16 +7,28 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="//netdna.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet" />
-  <!-- Add this to index.html inside <head> -->
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
-
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
+  <style>
+    /* make the dots small and aligned */
+    .dot-loader .spinner-grow {
+      width: 0.8rem;
+      height: 0.8rem;
+      margin: 0 3px;
+    }
+  </style>
 </head>
 <body>
   <app-root>
-    <p class="text-center">pahuway na inyung internet so damn laggy...</p>
-  </app-root>
+    <div class="d-flex flex-column justify-content-center align-items-center vh-100 text-center">
+      <img src="assets/images/bc logo.png" alt="Loading..." class="img-fluid mb-3" style="max-width: 100px;">
 
-  
-</body>
+      <!-- 3 Dots Loader -->
+      <div class="dot-loader d-flex justify-content-center">
+        <div class="spinner-grow text-secondary" role="status"></div>
+        <div class="spinner-grow text-secondary" role="status"></div>
+        <div class="spinner-grow text-secondary" role="status"></div>
+      </div>
+    </div>
+  </app-root>
 </body>
 </html>
