adding locking history

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,8 @@
   <title>Grading System</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="./assets/images/bc logo.png">
+   <!-- <link rel="icon" type="image/x-icon" href="./assets/images/7ded81f4-1954-4334-bc22-5e6629cfa22d.jpg"> -->
   <link href="//netdna.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
   <style>
